# multi-dictate

./: .gitignore  .pylintrc  CLAUDE.md  LICENSE  Makefile  PROMPT_STRATEGY_VERDICT.md  QWEN_OPTIMIZATION_README.md  RAG_ARCHITECTURE.md  RAG_FEATURES.md  RAG_FLOW_DIAGRAM.md  README.md  README_OPTIMIZATION.md  SETUP_INSTRUCTIONS.md  SIMPLIFIED_FLOW.md  VOICE_FIRST_WORKFLOW.md  benchmark_models.py  check_gemini_sdk.py  compare_outputs.py  demo_extraction.py  dictate.py  dictate.service  dictate.yaml  dictate.yaml.example  flowchart.md  install.sh  install_qwen.sh  kbd_utils.py  keyboard-flow.md  keyboard.yaml  lint.sh  pyproject.toml  qwen.py  requirements.txt  restart_dictate.sh  run_optimized_demo.py  setup.py  test_dictate.py  test_dictate_unit.py  test_typewrite_tkinter.py  text.py  (+2 more)
.obsidian/: workspace.json
Excalidraw/: idea.excalidraw.md  idea1.excalidraw.md
archive/: README.md  SIMPLIFIED_FLOW.md  adaptive_optimization_flow.py  debug_file_reader.py  debug_rag_system.py  integrate_enhanced_system.py  integrate_prompt_engineering.py  optimization_benchmark.py  optimize.py  qwen_optimize.py  run_dictate.py  run_optimized_demo.py  vector_database.py
docs/: prompt_engineering_best_practices.md
firefox-remote-control/: README.md  background.js  browser_control.py  browser_remote_control.json  manifest.json  native_host.py
multi_dictate/: dictate.py  enhanced_chroma_db.py  enhanced_reference_system.py  gemini_processor.py  implementation_guide_generator.py  kbd_utils.py  optimization_processor.py  problem_solver_processor.py  prompt_engineering_optimizer.py  (+8 more)
(+13 files in other folders)
