[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-dictate"
version = "1.0.0"
description = "A multi-language voice dictation application for Linux"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["voice", "dictation", "speech", "recognition", "linux", "multilingual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
]
dynamic = ["dependencies"]

[project.scripts]
multi-dictate = "multi_dictate.dictate:main"

[project.urls]
Homepage = "https://github.com/yourusername/multi-dictate"
Repository = "https://github.com/yourusername/multi-dictate"
Issues = "https://github.com/yourusername/multi-dictate/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["multi_dictate*"]